sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: value downto is not a member of Int
  for (i <- getNombreValeurs()-1 downto 1) {
                                 ^